# moments4u

./: .gitignore  AGENTS.md  README.md  requirements.txt
.github/workflows/: ci-cd.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/models/: __init__.py  audit.py  child.py  face.py  photo.py  playgroup.py  user.py
backend/app/routers/: __init__.py  admin.py  auth.py  faces.py  gallery.py  photos.py
backend/app/schemas/: auth.py  child.py  face.py  photo.py
backend/app/services/: auth_service.py  face_service.py  photo_service.py
backend/app/tasks/: __init__.py  celery_app.py  cleanup.py  face_processing.py  thumbnail.py
backend/app/utils/: __init__.py  face_engine.py  s3.py  security.py
backend/moments4u_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_auth.py  test_face_pipeline.py
directives/: README.md  data_retention.md  deployment.md  face_recognition.md  photo_upload.md  system_setup.md
execution/: README.md  run_cleanup.py  seed_data.py  setup_db.py
frontend/: .eslintrc.json  Dockerfile  next.config.js  package-lock.json  package.json
frontend/public/: manifest.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/parent/: layout.tsx
frontend/src/app/parent/gallery/: page.tsx
frontend/src/app/parent/onboarding/: page.tsx
frontend/src/app/teacher/: layout.tsx
frontend/src/lib/: api.ts  auth.tsx
frontend/src/styles/: globals.css
infra/: docker-compose.yml
(+3 files in other folders)
